# e87_badge

./: .gitignore  LICENSE  README.md  REVIEW-FINDINGS.md  conftest.py  hacs.json  pyproject.toml
custom_components/e87_badge/: __init__.py  config_flow.py  const.py  coordinator.py  manifest.json  sensor.py  services.py  services.yaml
custom_components/e87_badge/translations/: en.json
docs/: protocol.md
docs/captures/: 01-solid-red-360.ae01-writes.txt  01-solid-red-360.all-writes.txt  01-solid-red-360.c2e6fd02-writes.txt  01-solid-red-360.md  01-solid-red-360.notifications.txt  README.md  jadx-notes.md  notes.md  zrun-apk-sha256.txt
docs/superpowers/plans/: 2026-04-20-e87-phase1-protocol-re.md
docs/superpowers/specs/: 2026-04-20-e87-badge-design.md
spike/: _fixture.py  e87_client.py  replay.py  requirements.txt  send_live.py  send_live_full.py
src/e87_badge/: __init__.py  auth.py  cli.py  client.py  const.py  crc.py  discovery.py  errors.py  frame.py  jieli_cipher.py  notify.py  protocol.py
src/e87_badge/media/: avi.py  danmaku.py  gif.py  image.py  slideshow.py
tests/: test_avi.py  test_client_connect.py  test_client_integration.py  test_client_offload.py  test_crc.py  test_danmaku.py  test_discovery.py  test_fixtures_present.py  test_frame.py  test_gif.py  test_image.py  test_jieli_auth.py  test_protocol_offline.py  test_slideshow.py
