[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "e87-badge"
version = "0.0.0"
description = "Open client for the E-Badge E87 BLE pin"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

[tool.pytest.ini_options]
testpaths = ["tests"]
